# GetVersionFromGit

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
source/: main.cpp
